# phaistos

./: .gitignore  Dockerfile  Dockerfile.orig  Procfile  README.md  compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: build_docker.yaml  build_push_docker.yaml  django.yaml
api/: serializers.py  urls.py  views.py
app/: gstam_gunicorn_start_script.sh  manage.py
app/api/: cache.py  exceptions.py  serializers.py  urls.py  views.py
app/employees/: admin.py  ajax_datatable_views.py  forms.py  models.py  urls.py  views.py
app/leaves/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
app/main/: admin.py  models.py  views.py
app/phaistos/: asgi.py  urls.py  utils.py
app/users/: admin.py  signals.py
employees/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_auto_20211013_0747.py  0003_auto_20211013_0751.py  0007_auto_20211015_0628.py  0011_alter_employee_id_alter_specialization_id.py  0012_employee_registry_id_alter_employee_vat_number.py  0013_address_school.py
leaves/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
leaves/migrations/: 0001_initial.py  0002_auto_20211019_1017.py  0005_auto_20211019_1050.py  0009_auto_20220128_1129.py  0010_auto_20220211_1037.py
main/: views.py
phaistos/: commons.py  mixins.py  settings.py  urls.py  wsgi.py
phaistos/settings/: common.py  development.py
phaistos/templates/: _modal.html  (+2 more)
requirements/: base.txt  heroku.txt
templates/: auth_layout.html
users/: models.py
(+155 files in other folders)
