[project]
name = "phaistos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "django==4.2.26",
    "django-bootstrap-modal-forms==3.0.3",
    "django-bootstrap5>=24.1",
    "django-constance==3.1",
    "django-impersonate>=1.9.4",
    "django-registration>=3.3",
    "djangorestframework>=3.15.1",
    "mysql-connector-python>=9.2.0",
    "openpyxl>=3.1.5",
    "weasyprint>=63.1",
    "Spire.Doc.Free==12.12.0"
]


[project.optional-dependencies]
dev = [
    "pytest==6.1.2",
    "pytest-mock==3.10.0",
]
production = [
    "gunicorn[gthread]>=23.0.0",
    "mysqlclient>=2.2.6",   
]


